--- a/index.html
+++ b/index.html
@@ -1,10 +1,255 @@
+<!-- Index.html -->
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Illia Sheviakov • Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <!-- навігація -->
+    <!-- Навігація -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-black sticky-top shadow-sm">
+        <div class="container">
+            <!-- Видаляємо .navbar-brand -->
+            <div class="collapse navbar-collapse justify-content-center" id="mainNav">
+                <ul class="navbar-nav mb-2 mb-lg-0">
+                    <li class="nav-item"><a class="nav-link" href="#hero">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#about-me">About Me</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#education">Education</a></li>
+                </ul>
+            </div>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
+    </nav>
+
+    <!-- Hero -->
+    <section id="hero" class="hero">
+        <div class="overlay"></div>
+        <div class="hero-content">
+            <h1>Illia Sheviakov</h1>
+            <p>Junior .NET Developer</p>
+            <div class="social-icons">
+                <a href="https://linkedin.com/in/illiasheviakov" target="_blank">
+                    <img src="icons/linkedin.svg" alt="LinkedIn"><span>LinkedIn</span>
+                </a>
+                <a href="https://github.com/ilmarvvv" target="_blank">
+                    <img src="icons/github.svg" alt="GitHub"><span>GitHub</span>
+                </a>
+                <a href="https://www.upwork.com/freelancers/illiasheviakov" target="_blank">
+                    <img src="icons/upwork.png" alt="Upwork"><span>UpWork</span>
+                </a>
+                <a href="mailto:ilmarvvv@gmail.com">
+                    <img src="icons/email.svg" alt="Email"><span>Email</span>
+                </a>
+            </div>
+            <a class="btn" href="documents/ILLIA SHEVIAKOV .NET Developer Resume 3.pdf" target="_blank">Resume</a>
+        </div>
+    </section>
+
+    <!-- About Me -->
+    <section id="about-me" class="section">
+        <h2>About Me</h2>
+        <p>I am Illia Sheviakov, a Junior .NET Developer based in Canada, ON. I build scalable web applications using C#, ASP.NET Core, Entity Framework Core, and Azure, following Scrum SDLC and SOLID principles. I write clean, maintainable code, develop unit and integration tests with xUnit and Moq, and embrace continuous learning to drive projects forward.</p>
+    </section>
+
+    
+<!-- Skills -->
+<section id="skills" class="section">
+  
+    <!-- Hard Skills -->
+    <h2 class="skill-section-title">Hard Skills</h2>
+    <div class="skill-group hard-skills">
+      <ul>
+        <li><strong>Backend:</strong> .NET, ASP.NET Core MVC/API, EF Core, C#, LINQ</li>
+        <li><strong>Frontend:</strong> HTML/CSS, JavaScript, Bootstrap, Razor, Blazor, Angular, TypeScript, React, JSON/AJAX</li>
+        <li><strong>Database:</strong> T-SQL, SQL Server, Azure SQL, SQLite, Azure Cosmos DB</li>
+        <li><strong>Security:</strong> ASP.NET Core Identity, JWT, OAuth 2.0</li>
+        <li><strong>Testing:</strong> xUnit/NUnit, Postman, Swagger/OpenAPI</li>
+        <li><strong>Cloud:</strong> Azure App Service, Functions, Storage, Azure SignalR</li>
+        <li><strong>DevOps & Tools:</strong> Git, GitHub Actions, Azure DevOps, Docker, Visual Studio, VS Code, SSMS</li>
+      </ul>
+    </div>
+  
+    <!-- Soft Skills -->
+    <h2 class="skill-section-title">Soft Skills</h2>
+    <div class="skill-group soft-skills">
+        <ul class="soft-list">
+            <li><span class="soft-dot">•</span>Problem Solving</li>
+            <li><span class="soft-dot">•</span>Time Management</li>
+            <li><span class="soft-dot">•</span>Responsibility</li>
+            <li><span class="soft-dot">•</span>Adaptability</li>
+            <li><span class="soft-dot">•</span>Fast Learning</li>
+        </ul>
+    </div>
+  
+  </section>
+
+  <!-- Projects -->
+<section id="projects" class="projects-section">
+    <div class="section-content">
+      <h2>Projects</h2>
+      <div class="projects-grid">
+        <!-- Card 1 -->
+        <div class="project-card">
+          <div class="project-image">
+            <img src="images/Project/Test.JPG" alt="Project 1">
+          </div>
+          <div class="project-content">
+            <h3>BestStoreMVC</h3>
+            <p>ASP.NET MVC app with EF Core, CI/CD on Azure.</p>
+            <div class="project-buttons">
+                <a href="#" class="btn-small">Website</a>
+                <a href="#" class="btn-small github-btn">GitHub</a>
+            </div>
+          </div>
+        </div>
+        <!-- Card 2 -->
+        <div class="project-card">
+          <div class="project-image">
+            <img src="images/HeaderBackGround.jpg" alt="Project 2">
+          </div>
+          <div class="project-content">
+            <h3>AzureChatApp</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel sunt accusantium impedit! Unde provident dignissimos </p>
+            <div class="project-buttons">
+                <a href="#" class="btn-small">Website</a>
+                <a href="#" class="btn-small github-btn">GitHub</a>
+            </div>
+          </div>
+        </div>
+        <!-- Card 3 -->
+        <div class="project-card">
+          <div class="project-image">
+            <img src="images/HeaderBackGround.jpg" alt="Project 3">
+          </div>
+          <div class="project-content">
+            <h3>DiaryApp</h3>
+            <p>Real-time chat app with Azure SignalR & Sentiment Analysis.</p>
+            <div class="project-buttons">
+                <a href="#" class="btn-small">Website</a>
+                <a href="#" class="btn-small github-btn">GitHub</a>
+            </div>
+          </div>
+        </div>
+        <!-- Card 1 -->
+        <div class="project-card">
+            <div class="project-image">
+              <img src="images/HeaderBackGround.jpg" alt="Project 1">
+            </div>
+            <div class="project-content">
+              <h3>DiaryRestAPI</h3>
+              <p>ASP.NET MVC app with EF Core, CI/CD on Azure.</p>
+              <div class="project-buttons">
+                <a href="#" class="btn-small">Website</a>
+                <a href="#" class="btn-small github-btn">GitHub</a>
+            </div>
+            </div>
+          </div>
+          <!-- Card 2 -->
+          <div class="project-card">
+            <div class="project-image">
+              <img src="images/HeaderBackGround.jpg" alt="Project 2">
+            </div>
+            <div class="project-content">
+              <h3>BlazorChat</h3>
+              <p>REST API on .NET 6 with JWT authentication.</p>
+              <div class="project-buttons">
+                <a href="#" class="btn-small">Website</a>
+                <a href="#" class="btn-small github-btn">GitHub</a>
+            </div>
+            </div>
+          </div>
+          <!-- Card 3 -->
+          <div class="project-card">
+            <div class="project-image">
+              <img src="images/HeaderBackGround.jpg" alt="Project 3">
+            </div>
+            <div class="project-content">
+              <h3>Blazor Inventoty Management System</h3>
+              <p>Real-time chat app with Azure SignalR & Sentiment Analysis.</p>
+              <div class="project-buttons">
+                <a href="#" class="btn-small">Website</a>
+                <a href="#" class="btn-small github-btn">GitHub</a>
+            </div>
+            </div>
+          </div>
+      </div>
+    </div>
+  </section>
+
+  
+
+<!-- Education -->
+<section id="education" class="section">
+    <h2 class="edu-title">Education, Languages, and Certificates</h2>
+    <div class="edu-grid">
+        <!-- Education -->
+        <div class="edu-block">
+            <h3>Education</h3>
+            <ul>
+                <li><strong>.NET Developer</strong> 
+                    <br>CyberBionic Systematics
+                    <br><span class="edu-dates">Oct 2023 – Dec 2024</span>
+                </li>
+                <li><strong>Bachelor of Science in Machine Building Technology</strong>
+                    <br>Chernihiv Polytechnic National University
+                    <br><span class="edu-dates">Oct 2016 – Jul 2020</span>
+                </li>
+            </ul>
+        </div>
+
+        <!-- Languages -->
+        <div class="edu-block">
+            <h3>Languages</h3>
+            <ul>
+                <li><strong>English:</strong> B1/B2</li>
+                <li><strong>Ukrainian:</strong> Native</li>
+                <li><strong>Polish:</strong> A2–B1</li>
+                <li><strong>Russian:</strong> B2</li>
+            </ul>
+        </div>
+    </div>
+</section>
+
+
+<!-- Certificates -->
+<section id="certificates" class="section">
+    <h2>Certificates</h2>
+    <div class="cert-slider-container">
+        <button class="cert-prev">&#10094;</button>
+        
+        <div class="cert-slider-wrapper">
+            <div class="cert-slider">
+        <img src="images/Certificate/CyberBionicDiploma_page-0001.jpg" alt="Certificate 1">
+        <img src="images/Certificate/EFCoreITVDN_page-0001.jpg" alt="Certificate 2">
+        <img src="images/Certificate/F.jpg" alt="Certificate 3">
+        <img src="images/Certificate/W3SchoolCertificateSQL_page-0001.jpg" alt="Certificate 4">
+        <img src="images/Certificate/Blazor_IMS.jpg" alt="Certificate 5">
+        <img src="images/Certificate/Udemy50ProjectIn50Days_page-0001.jpg" alt="Certificate 6">
+        <img src="images/Certificate/UdemyBootstrap5FromScratch_page-0001.jpg" alt="Certificate 7">
+        <img src="images/Certificate/U.jpg" alt="Certificate 8">
+        <img src="images/Certificate/UdemyEComerce1Certificate_page-0001.jpg" alt="Certificate 9">
+    </div>
+</div>
+
+<button class="cert-next">&#10095;</button>
+</div>
+</section>
+
+<footer class="site-footer">
+    <p>&copy; 2025 Illia Sheviakov. All rights reserved. | 
+        <a href="mailto:ilmarvvv@gmail.com" style="color:#fff;text-decoration:underline;">ilmarvvv@gmail.com</a>
+    </p>
+</footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
