--- a/index.html
+++ b/index.html
@@ -12,23 +12,15 @@
 <body>
     <!-- навігація -->
     <!-- Навігація -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-black sticky-top shadow-sm">
-        <div class="container">
-            <!-- Видаляємо .navbar-brand -->
-            <div class="collapse navbar-collapse justify-content-center" id="mainNav">
-                <ul class="navbar-nav mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="#hero">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#about-me">About Me</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#education">Education</a></li>
-                </ul>
-            </div>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-        </div>
-    </nav>
+    <nav class="main-nav">
+  <ul>
+    <li><a href="#hero" class="nav-link">Home</a></li>
+    <li><a href="#about-me" class="nav-link">About Me</a></li>
+    <li><a href="#skills" class="nav-link">Skills</a></li>
+    <li><a href="#projects" class="nav-link">Projects</a></li>
+    <li><a href="#education" class="nav-link">Education</a></li>
+  </ul>
+</nav>
 
     <!-- Hero -->
     <section id="hero" class="hero">
