Updated the data

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="main-nav">
   <ul>
     <li><a href="#hero" class="nav-link">Home</a></li>
-    <li><a href="#about-me" class="nav-link">AboutMe</a></li>
+    <li><a href="#about-me" class="nav-link">About</a></li>
     <li><a href="#skills" class="nav-link">Skills</a></li>
     <li><a href="#projects" class="nav-link">Projects</a></li>
     <li><a href="#education" class="nav-link">Education</a></li>
@@ -42,7 +42,7 @@
                     <img src="icons/email.svg" alt="Email"><span>Email</span>
                 </a>
             </div>
-            <a class="btn" href="documents/ILLIA SHEVIAKOV .NET Developer Resume 3.pdf" target="_blank">Resume</a>
+            <a class="btn" href="documents/ILLIA SHEVIAKOV .NET Developer Resume 4.pdf" target="_blank">Resume</a>
         </div>
     </section>
 
@@ -92,84 +92,81 @@
         <!-- Card 1 -->
         <div class="project-card">
           <div class="project-image">
-            <img src="images/Project/Test.JPG" alt="Project 1">
+            <img src="images/Project/BestStoreMVC_IMG.JPG" alt="Project 1">
           </div>
           <div class="project-content">
             <h3>BestStoreMVC</h3>
-            <p>ASP.NET MVC app with EF Core, CI/CD on Azure.</p>
+            <p>Full-stack e-commerce web app built with ASP.NET Core MVC 8 and Entity Framework Core (code-first).</p>
             <div class="project-buttons">
-                <a href="#" class="btn-small">Website</a>
-                <a href="#" class="btn-small github-btn">GitHub</a>
+                <a href="https://beststore-pet-gge4ahamcce9cqg0.canadacentral-01.azurewebsites.net/" class="btn-small">Website</a>
+                <a href="https://github.com/ilmarvvv/BestStoreMVC" class="btn-small github-btn">GitHub</a>
             </div>
           </div>
         </div>
         <!-- Card 2 -->
         <div class="project-card">
           <div class="project-image">
-            <img src="images/HeaderBackGround.jpg" alt="Project 2">
+            <img src="images/Project/ChatAppIMG.JPG" alt="Project 2">
           </div>
           <div class="project-content">
             <h3>AzureChatApp</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel sunt accusantium impedit! Unde provident dignissimos </p>
+            <p>Real-time chat app on ASP.NET Core Razor Pages with Azure SignalR Service and optional sentiment analysis via Azure Cognitive Services. </p>
             <div class="project-buttons">
-                <a href="#" class="btn-small">Website</a>
-                <a href="#" class="btn-small github-btn">GitHub</a>
+                <a href="https://chatapp-web-test-bfd9babrg9ecdkg8.canadaeast-01.azurewebsites.net/" class="btn-small">Website</a>
+                <a href="https://github.com/ilmarvvv/ChatAppTestAzure" class="btn-small github-btn">GitHub</a>
             </div>
           </div>
         </div>
         <!-- Card 3 -->
         <div class="project-card">
           <div class="project-image">
-            <img src="images/HeaderBackGround.jpg" alt="Project 3">
+            <img src="images/Project/DiaryAppIMG.JPG" alt="Project 3">
           </div>
           <div class="project-content">
             <h3>DiaryApp</h3>
-            <p>Real-time chat app with Azure SignalR & Sentiment Analysis.</p>
+            <p>Simple personal diary app (ASP.NET Core 8, EF Core, SQLite) with full CRUD functionality.</p>
             <div class="project-buttons">
-                <a href="#" class="btn-small">Website</a>
-                <a href="#" class="btn-small github-btn">GitHub</a>
+                <a href="https://diaryapp-pet-accpa3awdmf6a5fe.canadacentral-01.azurewebsites.net/" class="btn-small">Website</a>
+                <a href="https://github.com/ilmarvvv/DiaryApp" class="btn-small github-btn">GitHub</a>
             </div>
           </div>
         </div>
-        <!-- Card 1 -->
+        <!-- Card 4 -->
         <div class="project-card">
             <div class="project-image">
-              <img src="images/HeaderBackGround.jpg" alt="Project 1">
+              <img src="images/Project/WebDiaryAPI_IMG.JPG" alt="Project 1">
             </div>
             <div class="project-content">
               <h3>DiaryRestAPI</h3>
-              <p>ASP.NET MVC app with EF Core, CI/CD on Azure.</p>
+              <p>REST-first personal diary service built with ASP.NET Core 8 Web API and Entity Framework Core (code-first) + SQL Server. Shows how to work with Swagger. </p>
               <div class="project-buttons">
-                <a href="#" class="btn-small">Website</a>
-                <a href="#" class="btn-small github-btn">GitHub</a>
+                <a href="https://github.com/ilmarvvv/WebDiaryAPI" class="btn-small github-btn">GitHub</a>
             </div>
             </div>
           </div>
-          <!-- Card 2 -->
+          <!-- Card 5 -->
           <div class="project-card">
             <div class="project-image">
-              <img src="images/HeaderBackGround.jpg" alt="Project 2">
+              <img src="images/Project/WorkInProgress.png" alt="Project 2">
             </div>
             <div class="project-content">
-              <h3>BlazorChat</h3>
-              <p>REST API on .NET 6 with JWT authentication.</p>
+              <h3>MessagnerApp</h3>
+              <p>Real-time messenger built with Blazor and Azure SignalR Service, using Cosmos DB for scalable NoSQL data storage.</p>
               <div class="project-buttons">
-                <a href="#" class="btn-small">Website</a>
-                <a href="#" class="btn-small github-btn">GitHub</a>
+
             </div>
             </div>
           </div>
-          <!-- Card 3 -->
+          <!-- Card 6 -->
           <div class="project-card">
             <div class="project-image">
-              <img src="images/HeaderBackGround.jpg" alt="Project 3">
+              <img src="images/Project/WorkInProgress.png" alt="Project 3">
             </div>
             <div class="project-content">
-              <h3>Blazor Inventoty Management System</h3>
-              <p>Real-time chat app with Azure SignalR & Sentiment Analysis.</p>
+              <h3>HoneyStoreApp</h3>
+              <p>Full-stack e-commerce app built with ASP.NET Core REST API and Angular, designed for managing and selling honey products.</p>
               <div class="project-buttons">
-                <a href="#" class="btn-small">Website</a>
-                <a href="#" class="btn-small github-btn">GitHub</a>
+
             </div>
             </div>
           </div>
