Changed Data and updated resume

--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
                     <img src="icons/email.svg" alt="Email"><span>Email</span>
                 </a>
             </div>
-            <a class="btn" href="documents/ILLIA SHEVIAKOV .NET Developer Resume 4.pdf" target="_blank">Resume</a>
+            <a class="btn" href="documents/ILLIA SHEVIAKOV Resume V5.pdf" target="_blank">Resume</a>
         </div>
     </section>
 
     <!-- About Me -->
     <section id="about-me" class="section">
         <h2>About Me</h2>
-        <p>I am Illia Sheviakov, a Junior .NET Developer based in Canada, ON. I build scalable web applications using C#, ASP.NET Core, Entity Framework Core, and Azure, following Scrum SDLC and SOLID principles. I write clean, maintainable code, develop unit and integration tests with xUnit and Moq, and embrace continuous learning to drive projects forward.</p>
+        <p>Junior .NET Developer with a strong self-study background and a passion for building clean, reliable, and useful applications and hands-on experience building ASP.NET Core web applications, RESTful APIs, and integrating Azure services. Although I have no commercial experience yet, I’ve completed multiple portfolio projects that demonstrate practical skills. Open to full-time, part-time, or freelance roles. Willing to complete a one-month unpaid trial period.</p>
     </section>
 
     
@@ -60,13 +60,14 @@
     <h2 class="skill-section-title">Hard Skills</h2>
     <div class="skill-group hard-skills">
       <ul>
-        <li><strong>Backend:</strong> .NET, ASP.NET Core MVC/API, EF Core, C#, LINQ</li>
-        <li><strong>Frontend:</strong> HTML/CSS, JavaScript, Bootstrap, Razor, Blazor, Angular, TypeScript, React, JSON/AJAX</li>
-        <li><strong>Database:</strong> T-SQL, SQL Server, Azure SQL, SQLite, Azure Cosmos DB</li>
-        <li><strong>Security:</strong> ASP.NET Core Identity, JWT, OAuth 2.0</li>
-        <li><strong>Testing:</strong> xUnit/NUnit, Postman, Swagger/OpenAPI</li>
-        <li><strong>Cloud:</strong> Azure App Service, Functions, Storage, Azure SignalR</li>
-        <li><strong>DevOps & Tools:</strong> Git, GitHub Actions, Azure DevOps, Docker, Visual Studio, VS Code, SSMS</li>
+        <li><strong>Backend:</strong> .NET, C#, ASP.NET Core MVC / REST API, Entity Framework Core, LINQ, Async / Await</li>
+        <li><strong>Frontend:</strong> HTML/CSS, JavaScript, TypeScript, Bootstrap, Razor, Blazor, Angular, React, JSON, AJAX</li>
+        <li><strong>Database:</strong> MS SQL Server, T-SQL, Azure SQL, SQLite, Azure Cosmos DB (NoSQL)</li>
+        <li><strong>Security:</strong> ASP.NET Core Identity</li>
+        <li><strong>Testing:</strong> xUnit, NUnit, Moq, Postman, Swagger / OpenAPI</li>
+        <li><strong>Cloud:</strong> AAzure App Service, Azure Functions, Azure Storage, Azure SignalR, Azure Cognitive Services</li>
+        <li><strong>DevOps & Tools:</strong> Git, GitHub Actions, Azure DevOps Pipelines, Docker, Visual Studio 2022, VS Code, SSMS, CI/CD</li>
+        <li><strong>Methodologies:</strong> SDLC, Agile, Scrum, SOLID, Clean Code, Design Patterns</li>
       </ul>
     </div>
   
@@ -165,6 +166,19 @@
             <div class="project-content">
               <h3>HoneyStoreApp</h3>
               <p>Full-stack e-commerce app built with ASP.NET Core REST API and Angular, designed for managing and selling honey products.</p>
+              <div class="project-buttons">
+
+            </div>
+            </div>
+          </div>
+          <!-- Card 7 -->
+          <div class="project-card">
+            <div class="project-image">
+              <img src="images/Project/WorkInProgress.png" alt="Project 2">
+            </div>
+            <div class="project-content">
+              <h3>AI Lecture Summarizer</h3>
+              <p>AI-powered web app that transcribes lecture recordings and generates structured summaries, key points, and self-assessment questions using Azure Speech to Text and OpenAI services.</p>
               <div class="project-buttons">
 
             </div>
